# presto-openapi

./: .gitignore  README.md  openapi.yaml  pom.xml  tag_release.sh
python-example-api/: api.py  pyproject.toml  test.py
python-example-api/data/inventory/: products.csv  suppliers.csv
python-example-api/data/sales/: customers.csv  orders.csv
src/main/java/com/facebok/presto/connector/openapi/: DefaultOpenAPIService.java  OpenAPIColumnHandle.java  OpenAPIConnector.java  OpenAPIConnectorConfig.java  OpenAPIConnectorFactory.java  OpenAPIConnectorSplit.java  OpenAPIErrorCode.java  OpenAPIHandleResolver.java  OpenAPIMetadata.java  OpenAPIModule.java  OpenAPIPageSource.java  OpenAPIPageSourceProvider.java  OpenAPIPlugin.java  OpenAPIPluginConfig.java  OpenAPIService.java  OpenAPIServiceException.java  OpenAPISplit.java  OpenAPISplitManager.java  OpenAPISplitSource.java  OpenAPITableHandle.java  OpenAPITableLayoutHandle.java  OpenAPITableMetadata.java  OpenAPITransactionHandle.java
src/main/java/com/facebok/presto/connector/openapi/annotations/: ConnectorId.java  ForMetadataRefresh.java
src/main/java/com/facebok/presto/connector/openapi/util/: RebindSafeMBeanServer.java  TupleDomains.java
src/modernizer/: violations.xml
src/test/java/com/facebok/presto/connector/openapi/: PythonExampleApiTest.java  TestDefaultOpenAPIService.java  TestOpenAPIPlugin.java  TestPythonExampleApi.java  TestPythonExampleApiWithAlternativeAuth.java  TestPythonExampleApiWithBasicAuth.java  TestPythonExampleApiWithBearerToken.java
